--- a/qr-auth-service/src/main/resources/application.properties
+++ b/qr-auth-service/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=qr-scan-service
+spring.application.name=qr-auth-service
 server.port=8080
 
 spring.profiles.active=@activeProfile@
