--- a/qr-auth-frontend/Dockerfile
+++ b/qr-auth-frontend/Dockerfile
@@ -2,9 +2,9 @@
 FROM node:14.21.0-alpine AS builder
 WORKDIR /app
 COPY package.json package-lock.json ./
-RUN npm install
+RUN npm install -g npm@8 && npm install
 COPY . .
-RUN npm run build --configuration=production --aot --output-hashing=all
+RUN npm run-script build-prod
 
 
 
@@ -13,5 +13,5 @@ FROM nginx:alpine
 WORKDIR /usr/share/nginx/html
 # Remove default nginx static assets
 RUN rm -rf ./*
-COPY --from=builder /app/dist/Angular11JwtAuth .
+COPY --from=builder /app/dist/qr-auth-frontend .
 ENTRYPOINT ["nginx", "-g", "daemon off;"]
