--- a/qr-auth-frontend/package.json
+++ b/qr-auth-frontend/package.json
@@ -5,6 +5,7 @@
     "ng": "ng",
     "start": "ng serve --port 4300",
     "build": "ng build",
+    "build-prod": "ng build  --configuration prod --output-path=dist/qr-auth-frontend",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
