--- a/qr-auth-frontend/Dockerfile
+++ b/qr-auth-frontend/Dockerfile
@@ -1,11 +1,11 @@
 ### state 1: Build ###
-FROM node:14.21.0-alpine AS builder
-WORKDIR /app
-COPY package.json package-lock.json ./
-RUN npm install
-COPY . .
-RUN npm run-script build-prod
-
+#FROM node:14.21.0-alpine AS builder
+#WORKDIR /app
+#COPY package.json package-lock.json ./
+#RUN npm install
+#COPY . .
+#RUN npm run-script build-prod
+#
 
 
 ### stage 2: run stage ###
@@ -13,5 +13,6 @@ FROM nginx:alpine
 WORKDIR /usr/share/nginx/html
 # Remove default nginx static assets
 RUN rm -rf ./*
-COPY --from=builder /app/dist/qr-auth-frontend .
+#COPY --from=builder /app/dist/qr-auth-frontend .
+COPY dist/qr-auth-frontend .
 ENTRYPOINT ["nginx", "-g", "daemon off;"]
